# oproxy

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  architecture.md  build.rs  docker-compose.yml
.github/workflows/: ci-manual.yaml  release-docker-asset.yaml  release-smoke.yaml
configs/: default.yaml
docs/: compose.md  configuration.md  dns-overrides.md  docker.md  getting-started.md  https-mitm.md  security.md  socks5.md  troubleshooting.md
scripts/: capture-doc-assets.mjs
src/: app.css  control_plane.rs  design_v2.html  diff.rs  export.rs  har.rs  index.html  lib.rs  main.rs  management.rs  manifest.json  redaction.rs  security.rs  setup.rs  setup_wizard.html  storage.rs  sw.js  webhooks.rs
src/api/: mod.rs
src/certs/: mod.rs
src/config/: mod.rs
src/control_plane/: assets.rs  auth.rs  breakpoints.rs  extensions.rs  forward.rs  metrics.rs  policy.rs  sessions.rs  settings.rs  storage_paths.rs  webhooks.rs
src/core/: context.rs  engine.rs  engine_tests.rs  integration_tests.rs  massive_engine_tests.rs  mod.rs  perf_tests.rs  playback.rs
src/design/: app.jsx  build.mjs  compose.jsx  detail-panel.jsx  entry.jsx  icons.jsx  index.html  package-lock.json  package.json  redaction.jsx  sessions-table.jsx  styles.css  surfaces-extra.jsx  surfaces.jsx  tweaks-panel.jsx
src/js/: breakpoints.js  chrome.js  compose.js  rules.js  state.js  traffic.js
src/middleware/: chain.rs  mod.rs
src/middleware/plugins/: breakpoints.rs  capture_filter.rs  dns_override.rs  graphql_inspector.rs  grpc_inspector.rs  header_map.rs  inspection.rs  jwt_inspector.rs  lua_engine.rs  mock.rs  mod.rs  modification.rs  rewrite.rs  routing.rs
src/runtime/: app.rs  error.rs  listeners.rs  logging.rs  mod.rs  shutdown.rs  state.rs  supervisor.rs
src/session/: mod.rs
src/transport/: connect.rs  context.rs  http.rs  lifecycle.rs  mod.rs  socks5.rs  tls.rs  websocket.rs
tests/: test_favicons.rs  test_rewrites.rs
tests/browser/: global-setup.js  global-teardown.js  package-lock.json  package.json  playwright.config.js
tests/browser/specs/: 00-beta-smoke.spec.js  01-page-load.spec.js  02-theme.spec.js  03-navigation.spec.js  04-traffic.spec.js  05-modals.spec.js  06-breakpoints.spec.js  07-rewrites.spec.js  08-mapping.spec.js  09-dns.spec.js  10-ssl.spec.js  11-throttle.spec.js  12-mock.spec.js  13-scripts.spec.js  14-webhooks.spec.js  15-compose.spec.js  16-settings.spec.js  17-sessions-api.spec.js  18-import-export.spec.js  19-session-detail.spec.js  20-capture-filter.spec.js  21-sse-stream.spec.js  22-roadmap-fixes.spec.js  23-p1-workflows.spec.js  24-large-captures.spec.js  25-accessibility.spec.js  26-persistence.spec.js  27-visual-smoke.spec.js  28-critical-controls.spec.js  helpers.js
tests/common/: mod.rs
