[package]
name = "oproxy"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Programmable HTTP/HTTPS proxy for inspecting, debugging, and manipulating network traffic"
repository = "https://github.com/sauravrao637/oproxy"

[[bin]]
name = "oproxy"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rcgen = "0.11"
rustls = "0.21"
tokio-rustls = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
paste = "1.0"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3.6"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
flate2 = "1"
brotli = "3"
bytes = "1"
indexmap = { version = "2", features = ["serde"] }
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "server"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tokio-stream = { version = "0.1", features = ["sync"] }
thiserror = "1"
futures-util = "=0.3.31"
base64 = "0.21"
