[package]
name = "oproxy"
version = "0.1.0"
edition = "2024"
build = "build.rs"
license = "MIT"
description = "Programmable HTTP/HTTPS proxy for inspecting, debugging, and manipulating network traffic"
repository = "https://github.com/sauravrao637/oproxy"

[[bin]]
name = "oproxy"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
axum = "0.8.9"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rcgen = "0.14"
rustls = "0.23"
tokio-rustls = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9"
paste = "1.0"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3.6"
async-trait = "0.1"
uuid = { version = "1.23", features = ["v4", "serde"] }
regex = "1.12"
flate2 = "1"
brotli = "8"
bytes = "1"
indexmap = { version = "2", features = ["serde"] }
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "server"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tokio-stream = { version = "0.1", features = ["sync"] }
thiserror = "2"
futures-util = "0.3.32"
base64 = "0.22"
similar = "3"
graphql-parser = "0.4"
prost = "0.14"
mlua = { version = "0.11", features = ["lua54", "vendored", "async", "send"] }
hmac = "0.13"
sha2 = "0.11"
